--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 						</div>
 					</div>
 				</section>
-				<section data-background-image="images/homepage_wide.jpg"></section>
+<!--				<section data-background-image="images/homepage_wide.jpg"></section>-->
+				<section data-background-iframe="https://vault.library.uvic.ca" data-background-interactive></section>
 				<section><h2>Interactive Video Transcripts</h2></section>
 				<section>
 					<h2>Running the Code</h2>
