Add presentation date to title slide.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<span>tjychan@uvic.ca</span>
 					<br/>
 					<span>Senior Developer&ensp;|&ensp;University of Victoria Libraries</span>  <img class="inline-icon" style="margin-bottom: -10px" src="images/canada.png"/><br/>
+					<span>June 15, 2023</span><br/>
 					<span>Link to slides: <a href="https://uviclibrary.github.io/OR2023Pres/" target="_blank">uviclibrary.github.io/OR2023Pres</a></span>
 				</section>
 				</section>
