Adjust CSS and notes.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<ul>
 							<li>Holds digitized materials from Special Collections & Archives, faculty/community partnerships</li>
 							<li class="fragment">Customized instance of <a href="https://hyku.samvera.org/" target="_blank">Hyku</a> (<a href="https://samvera.org/what-is-samvera/samvera-open-source-repository-framework" target="_blank">Samvera</a>), migrated from ContentDM starting in 2018</li>
-							<li class="fragment">94 collections, 12000+ works, 98000+ files</li>
+							<li class="fragment">90+ collections, 12000+ works, 98000+ files</li>
 							<li class="fragment">2 developers, 2-3 metadata staff working directly in/with Vault (among other projects)</li>
 						</ul>
 					</div>
@@ -72,8 +72,8 @@
 							<li>We call it Vault because it mostly holds digitized objects from our Special Collections and Archives (typically our most unique and rare materials)</li>
 							<li>Also houses materials from faculty and community partnerships, such as audio recordings or oral histories</li>
 							<li>Vault is built on an open-source software called Hyku, which is maintained by the Samvera community</li>
-							<li>At present, we have 94 collections with over 12000 works in them, over 98000 files</li>
-							<li>To give you an idea of staffing levels, we have 2 developers who spend ~80% of their time on Vault and 2-3 metadata staff who spend 5-30% of their time working on the uploading and editing records</li>
+							<li>At present, we have 94 collections with over 12000 works in them. Those works are comprised of over 98000 files; about 70% of works were previously in ContentDM</li>
+							<li>To give you an idea of staffing levels, we have 2 developers who spend ~80% of their time on Vault and 2-3 metadata staff who spend 5-30% of their time creating or editing metadata</li>
 						</ul>
 					</aside>
 				</section>
