--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<span>tjychan@uvic.ca</span>
 					<br/>
 					<span>Senior Developer&ensp;|&ensp;University of Victoria Libraries</span>  <img class="inline-icon" style="margin-bottom: -10px" src="images/canada.png"/><br/>
-					<span>15 June 2023&ensp;|&ensp;Stellenbosch, ZA</span><br/>
+					<span>15 June 2023&ensp;|&ensp;Open Repositories 2023</span><br/>
 					<span>Link to slides: <a href="https://uviclibrary.github.io/OR2023Pres/" target="_blank">uviclibrary.github.io/OR2023Pres</a></span>
 				</section>
 				</section>
