--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
+				showNotes: true,
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealZoom, RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
