--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
-				showNotes: true,
+				// showNotes: true,
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealZoom, RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
