Add links to Vault

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<li>Holds digitized materials from Special Collections & Archives, faculty/community partnerships</li>
 							<li class="fragment">Customized instance of <a href="https://hyku.samvera.org/" target="_blank">Hyku</a> (<a href="https://samvera.org/what-is-samvera/samvera-open-source-repository-framework" target="_blank">Samvera</a>), migrated from ContentDM starting in 2018</li>
 							<li class="fragment">90+ collections, 12000+ works, 98000+ files</li>
-							<li class="fragment">2 developers, 2-3 metadata staff working directly in/with Vault (among other projects)</li>
+							<li class="fragment">2 developers, 2-3 metadata staff working directly in/with <a href="https://vault.library.uvic.ca" target="_blank">Vault</a> (among other projects)</li>
 						</ul>
 					</div>
 					<aside class="notes">
@@ -98,7 +98,6 @@
 					<aside class="notes">
 						<li>Mathew Ko Colour Films collection is a collection of home movies from the early 1950s</li>
 						<li>Many of our collections, like this one, depict local places or events</li>
-						<li>Vault (and Hyku) handles a diverse range of media and file types</li>
 						<li>Examples of things we do NOT put in Vault: theses & dissertations (they go in DSpace), datasets (Dataverse)</li>
 					</aside>
 				</section>
@@ -277,21 +276,21 @@
 						</ul>
 					</aside>
 				</section>
-				<section data-background-iframe="https://vault.library.uvic.ca" data-background-interactive>
-					<div class="iframe-descr" style="top: 275px; right: -50px;">
-						<h2>Homepage Facets</h2>
-						<p>Allows users to filter using broad categories (vault.library.uvic.ca). Users can also browse collections and works visually.</p>
-					</div>
-					<aside class="notes">
-						<ul>
-							<li>We've also heavily customized our home page. Here, users can quickly run faceted searches by genre, time period (again, EDTF dates), popular subjects, or (geographic) place.</li>
-							<li>We also have the ability to upload collection thumbnails or select them from works in the collection </li>
-							<li>Collections are also listed alphabetically under "All Collections"</li>
-							<li>We also display recently created works or collections (this is mostly for staff)</li>
-						</ul>
-					</aside>
-				</section>
-				<section data-background-iframe="https://vault.library.uvic.ca/concern/generic_works/496f803b-24bb-415d-a7fc-8e9af1b38741?locale=en" data-background-interactive>
+                <section data-background-iframe="https://vault.library.uvic.ca" data-background-interactive>
+                    <div class="iframe-descr" style="top: 275px; right: -50px;">
+                        <h2>Homepage Facets</h2>
+                        <p>Allows users to filter using broad categories (vault.library.uvic.ca). Users can also browse collections and works visually.</p>
+                    </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>We've also heavily customized our home page. Here, users can quickly run faceted searches by genre, time period (again, EDTF dates), popular subjects, or (geographic) place.</li>
+                            <li>We also have the ability to upload collection thumbnails or select them from works in the collection </li>
+                            <li>Collections are also listed alphabetically under "All Collections"</li>
+                            <li>We also display recently created works or collections (this is mostly for staff)</li>
+                        </ul>
+                    </aside>
+                </section>
+                <section data-background-iframe="https://vault.library.uvic.ca/concern/generic_works/496f803b-24bb-415d-a7fc-8e9af1b38741?locale=en" data-background-interactive>
 					<div class="iframe-descr" style="left: 0; top: 275px;">
 						<h2>Interactive Video Transcripts</h2>
 						<p>Able Player uses .vtt files (Web VTT format) to create interactive transcripts for videos when available.</p>
@@ -357,6 +356,8 @@
 					&ensp;|&ensp;
 					<span>tjychan@uvic.ca</span>
 					<br/>
+                    <span>Vault: <a href="https://vault.library.uvic.ca" target="_blank">vault.library.uvic.ca</a></span>
+                    <br/>
 					<span>Link to slides: <a href="https://uviclibrary.github.io/OR2023Pres/" target="_blank">uviclibrary.github.io/OR2023Pres</a></span>
 					<br/>
 					<span>Slides made with <a href="https://revealjs.com/" target="_blank">reveal.js</a></span>
