--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
 					</aside>
 				</section>
 				<section data-background="images/date_created.jpg"></section>
-				<section data-background="images/date_created_search.jpg"></section>
+				<section>
+					<img src="images/date_created_search.jpg" />
+				</section>
 				<section data-background="images/interactive_transcripts.jpg"></section>
 <!--				<section>-->
 <!--					<section data-background-iframe="https://vault.library.uvic.ca/concern/generic_works/41991908-2b23-41bd-a682-eaacb211ede3?locale=en" data-background-interactive>-->
